--- a/kafka-producers/values.yaml
+++ b/kafka-producers/values.yaml
@@ -7,7 +7,7 @@ image:
   pullPolicy: IfNotPresent
 
 env:
-  lsstDdsDomain: rubinobs
+  lsstDdsPartitionPrefix: rubinobs
   brokerIp: kafka-0-tucson-teststand-efd.lsst.codes
   brokerPort: 31090
   registryAddr: https://schema-registry-tucson-teststand-efd.lsst.codes
