Add new configuration values to ospl-config.

--- a/ospl-config/values.yaml
+++ b/ospl-config/values.yaml
@@ -2,3 +2,11 @@ namespaces:
   - csc
 
 networkInterface: test
+shmemSize: 104857600
+maxSamplesWarnAt: 50000
+schedulingClass: Default
+schedulingPriority: 0
+monitorStackSize: 6000000
+waterMarksWhcHigh: 8MB
+deliveryQueueMaxSamples: 2500
+lsstDdsPartitionPrefix: ncsa
