New parameters for ospl-config chart.

--- a/ospl-config/values.yaml
+++ b/ospl-config/values.yaml
@@ -9,3 +9,5 @@ schedulingPriority: 0
 monitorStackSize: 6000000
 waterMarksWhcHigh: 8MB
 deliveryQueueMaxSamples: 2500
+dsGracePeriod: 60s
+squashParticipants: false
