Allow extra envvars from main env section.

--- a/kafka-producers/templates/deployment.yaml
+++ b/kafka-producers/templates/deployment.yaml
@@ -76,6 +76,12 @@ spec:
               {{- else }}
               value: {{ $.Values.env.logLevel | quote }}
               {{- end }}
+            {{- if $.Values.env.extras }}
+            {{- range $env_var, $env_value := $.Values.env.extras }}
+            - name: {{ $env_var }}
+              value: {{ $env_value | quote }}
+            {{- end }}
+            {{- end }}
             {{- if .env }}
             {{- if .env.extras }}
             {{- range $env_var, $env_value := .env.extras }}
