Add domain reporting to ospl-config.

--- a/ospl-config/values.yaml
+++ b/ospl-config/values.yaml
@@ -12,6 +12,7 @@ deliveryQueueMaxSamples: 2500
 dsGracePeriod: 60s
 squashParticipants: false
 namespacePolicyAlignee: Lazy
+domainReportEnabled: true
 ddsi2TracingEnabled: true
 ddsi2TracingVerbosity: finer
 ddsi2TracingLogfile: /tmp/ddsi2.log
