--- a/csc/templates/job.yaml
+++ b/csc/templates/job.yaml
@@ -35,8 +35,8 @@ spec:
               mountPath: /tmp
           {{- if .Values.entrypoint }}
             - name: entrypoint
-              mountPath: /home/saluser/.setup.sh
-              subPath: .setup.sh
+              mountPath: /home/saluser/.startup.sh
+              subPath: .startup.sh
           {{- end }}
           {{- if .Values.mountpoint }}
           {{- range $values := .Values.mountpoint }}
@@ -59,8 +59,8 @@ spec:
           configMap:
             name: {{ .Release.Name }}-entrypoint
             items:
-              - key: .setup.sh
-                path: .setup.sh
+              - key: .startup.sh
+                path: .startup.sh
       {{- end }}
       {{- if .Values.mountpoint }}
       {{- range $values := .Values.mountpoint }}
