--- a/csc/templates/mountpoint-pvc.yaml
+++ b/csc/templates/mountpoint-pvc.yaml
@@ -1,5 +1,5 @@
-{{- if .Values.mountpoint }}
-{{- range $values := .Values.mountpoint }}
+{{- if .Values.pvcMountpoint }}
+{{- range $values := .Values.pvcMountpoint }}
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
