--- a/csc/values-dsm1-pvc.yaml
+++ b/csc/values-dsm1-pvc.yaml
@@ -4,14 +4,14 @@ image:
   pullPolicy: IfNotPresent
 
 env:
-  LSST_DDS_DOMAIN: citest
+  LSST_DDS_PARTITION_PREFIX: citest
   CSC_INDEX: 1
   CSC_MODE: 1
 
 osplVersion: V6.9.0
 namespace: csc
 
-mountpoint:
+pvcMountpoint:
   - name: path1
     path: /home/saluser/telemetry
     accessMode: ReadWriteOnce
