Latest chart updates
* Fix ennvar in ospl-daemon default values file.
* Change host IPC and PID checks in csc, kafka-producer and ospl-daemon charts.
* Make multicast annotation switchable in csc and kafka-producer charts.
  * Default for when useMulticast is not defined is no annotation
* Add route fixer init container for ospl-daemon.
* Update chart versions for new releases.

--- a/csc/templates/job.yaml
+++ b/csc/templates/job.yaml
@@ -5,14 +5,18 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     csc: {{ .Release.Name }}
+  {{- if and $.Values.useMulticast (ne ( $.Values.useMulticast | toString ) "<nil>" ) }}
   {{- include "multicast.annotation" . | nindent 2 }}
+  {{- end }}
 spec:
   completions: 1
   template:
     metadata:
       labels:
         csc: {{ .Release.Name }}
+      {{- if and $.Values.useMulticast (ne ( $.Values.useMulticast | toString ) "<nil>" ) }}
       {{- include "multicast.annotation" . | nindent 6 }}
+      {{- end }}
     spec:
       containers:
         - name: {{ .Release.Name }}
@@ -90,5 +94,5 @@ spec:
       imagePullSecrets:
         - name: {{ $.Values.namespace }}-{{ $.Values.image.nexus3 }}
       {{- end }}
-      hostIPC: {{ $.Values.useHostIpc | default true }}
-      hostPID: {{ $.Values.useHostPid | default true }}
+      hostIPC: {{ or $.Values.useHostIpc (eq ( $.Values.useHostIpc | toString ) "<nil>" ) }}
+      hostPID: {{ or $.Values.useHostPid (eq ( $.Values.useHostPid | toString ) "<nil>" ) }}
