--- a/charts/love-nginx/Chart.yaml
+++ b/charts/love-nginx/Chart.yaml
@@ -1,4 +1,6 @@
 apiVersion: v2
 name: love-nginx
-version: 0.1.0
+version: 0.1.1
+maintainers:
+  - name: mareuter
 description: Helm chart for the LOVE Nginx server.
