--- a/charts/csc/values-dsm1-nexus3.yaml
+++ b/charts/csc/values-dsm1-nexus3.yaml
@@ -5,7 +5,7 @@ image:
   nexus3: nexus3-docker
 
 env:
-  LSST_DDS_DOMAIN: citest
+  LSST_DDS_PARTITION_PREFIX: citest
   CSC_INDEX: 1
   CSC_MODE: 1
 
