--- a/charts/csc/values-dsm1-secrets.yaml
+++ b/charts/csc/values-dsm1-secrets.yaml
@@ -11,8 +11,8 @@ env:
 osplVersion: V6.9.0
 namespace: csc
 
-useMulticast: true
-initContainer:
-  repository: lsstit/ddsnet4u
-  tag: latest
-  pullPolicy: IfNotPresent 
+envSecrets:
+  - key: SECRET_NEEDED_1
+    value: i-have-one-secret
+  - key: SECRET_NEEDED_2
+    value: i-have-another-secret
