--- a/charts/csc/Chart.yaml
+++ b/charts/csc/Chart.yaml
@@ -1,4 +1,6 @@
-apiVersion: v1
+apiVersion: v2
 name: csc
+maintainers:
+  - name: mareuter
 description: A Helm chart for deploying control system CSCs.
-version: 0.7.2
+version: 0.7.3
