Change secret handling in csc chart.

--- a/charts/csc/templates/job.yaml
+++ b/charts/csc/templates/job.yaml
@@ -30,11 +30,12 @@ spec:
             - name: {{ $env_var }}
               value: {{ $env_value | quote }}
           {{- end }}
-          {{- range $secret := .Values.envSecrets }}
-            - name: {{ $secret.key }}
+          {{- range $env := .Values.envSecrets }}
+            - name: {{ $env.name }}
               valueFrom:
                 secretRef:
-                  name: {{ $.Values.namespace }}-{{ $secret.value }}
+                  name: {{ $.Values.namespace }}-{{ $env.secretName }}
+                  key: {{ $env.secretKey }}
           {{- end }}
           {{- end }}
           volumeMounts:
