--- a/charts/csc/values-dsm1-secrets.yaml
+++ b/charts/csc/values-dsm1-secrets.yaml
@@ -12,7 +12,9 @@ osplVersion: V6.9.0
 namespace: csc
 
 envSecrets:
-  - key: SECRET_NEEDED_1
-    value: i-have-one-secret
-  - key: SECRET_NEEDED_2
-    value: i-have-another-secret
+  - name: SECRET_NEEDED_1
+    secretName: top-key
+    secretKey: i-have-one-secret
+  - name: SECRET_NEEDED_2
+    secretName: top-key
+    secretKey: i-have-another-secret
