Fix attribute in csc chart.

--- a/charts/csc/templates/job.yaml
+++ b/charts/csc/templates/job.yaml
@@ -33,7 +33,7 @@ spec:
           {{- range $env := .Values.envSecrets }}
             - name: {{ $env.name }}
               valueFrom:
-                secretRef:
+                secretKeyRef:
                   name: {{ $.Values.namespace }}-{{ $env.secretName }}
                   key: {{ $env.secretKey }}
           {{- end }}
