--- a/charts/love-manager/templates/vault-secret.yaml
+++ b/charts/love-manager/templates/vault-secret.yaml
@@ -1,13 +1,9 @@
-{{- range $item := concat .Values.redis.env .Values.database.env .Values.env }}
-{{- if $item.isSecret }}
 ---
 apiVersion: ricoberger.de/v1alpha1
 kind: VaultSecret
 metadata:
-  name: {{ $item.value }}
+  name: {{ $.Values.envSecretKeyName }}-secrets
   namespace: {{ $.Values.namespace }}
 spec:
-  path: secret/k8s_operator/{{ $.Values.secret_path }}/ts/software/{{ $item.value }}
+  path: secret/k8s_operator/{{ $.Values.secret_path }}/ts/software/{{ $.Values.envSecretKeyName }}
   type: Opaque
-{{- end }}
-{{- end }}
