--- a/charts/love-frontend/Chart.yaml
+++ b/charts/love-frontend/Chart.yaml
@@ -1,4 +1,6 @@
 apiVersion: v2
 name: love-frontend
-version: 0.1.0
+version: 0.1.2
+maintainers:
+  - name: mareuter
 description: Helm chart for the LOVE Frontend.
