--- a/charts/love-manager/Chart.yaml
+++ b/charts/love-manager/Chart.yaml
@@ -1,4 +1,6 @@
 apiVersion: v2
 name: love-manager
-version: 0.1.0
+version: 0.1.2
+maintainers:
+  - name: mareuter
 description: Helm chart for the LOVE manager service.
