--- a/charts/love-manager/templates/database-service.yaml
+++ b/charts/love-manager/templates/database-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-database-service
+  name: {{ include "love-manager.database.fullname" . }}-service
   namespace: {{ .Values.namespace }}
 spec:
   selector:
-    app: {{ .Release.Name }}
+    app.kubernetes.io/instance: {{ include "love-manager.database.fullname" . }}
   ports:
   - port: {{ .Values.database.port }}
 
