--- a/charts/love-manager/values.yaml
+++ b/charts/love-manager/values.yaml
@@ -14,29 +14,30 @@ ingress:
 pvcMountpoint:
 - name: love-manager
   path: /usr/src/love/manager
+envSecretKeyName: love
 env:
-  - key: SECRET_KEY
+  - var: SECRET_KEY
     value: manager-secret-key
     isSecret: true
-  - key: PROCESS_CONNECTION_PASS
-    value: manager-connection-password
+  - var: PROCESS_CONNECTION_PASS
+    value: manager-process-connection-password
     isSecret: true
-  - key: ADMIN_USER_PASS
+  - var: ADMIN_USER_PASS
     value: manager-admin-password
     isSecret: true
-  - key: USER_USER_PASS
+  - var: USER_USER_PASS
     value: manager-user-user-password
     isSecret: true
-  - key: CMD_USER_PASS
+  - var: CMD_USER_PASS
     value: manager-cmd-user-password
     isSecret: true
-  - key: SERVER_URL
-    value: "love.lsst.local"
-  - key: LOVE_PRODUCER_WEBSOCKET_HOST
-    value: "love-service/manager/ws/subscription"
-  - key: COMMANDER_HOSTNAME
-    value: "love-commander-service"
-  - key: COMMANDER_PORT
+  - var: SERVER_URL
+    value: love.lsst.local
+  - var: LOVE_PRODUCER_WEBSOCKET_HOST
+    value: love-service/manager/ws/subscription
+  - var: COMMANDER_HOSTNAME
+    value: love-commander-service
+  - var: COMMANDER_PORT
     value: 5000
 config: |
     {
@@ -62,18 +63,18 @@ database:
     accessMode: ReadWriteMany
     claimSize: 2Gi
   env:
-    - key: DB_ENGINE
+    - var: DB_ENGINE
       value: postgresql
-    - key: DB_NAME
+    - var: DB_NAME
       value: postgres
-    - key: DB_USER
+    - var: DB_USER
       value: postgres
-    - key: DB_HOST
+    - var: DB_HOST
       value: love-manager-database-service
-    - key: DB_PORT
+    - var: DB_PORT
       value: 5432
-    - key: DB_PASS
-      value: postgres-password
+    - var: DB_PASS
+      value: database-password
       isSecret: true
 redis:
   image:
@@ -81,9 +82,17 @@ redis:
     tag: 5.0.3
     pullPolicy: IfNotPresent
   env:
-    - key: REDIS_HOST
+    - var: REDIS_HOST
       value: love-manager-redis-service
-    - key: REDIS_PASS
+    - var: REDIS_PASS
       value: redis-password
       isSecret: true
   port: 6379
+
+resources: {}
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
