--- a/charts/love-nginx/templates/ingress.yaml
+++ b/charts/love-nginx/templates/ingress.yaml
@@ -1,6 +1,6 @@
 ---
 {{- if eq .Values.serviceType "ClusterIP" }}
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}-ingress
