--- a/charts/love-nginx/values.yaml
+++ b/charts/love-nginx/values.yaml
@@ -14,14 +14,14 @@ ingress:
 config: |
   {
     server {
-    listen 80;
-    server_name localhost;
-    location / {
-      root   /usr/src/frontend/love-frontend;
-      try_files $uri$args $uri$args/ $uri/ /index.html;
+        listen 80;
+        server_name localhost;
+        location / {
+          root   /usr/src/love-frontend;
+          try_files $uri$args $uri$args/ $uri/ /index.html;
     }
     location /manager {
-        proxy_pass http://love-manager:8000;
+        proxy_pass http://manager:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -29,10 +29,10 @@ config: |
         proxy_redirect off;
     }
     location /manager/static {
-      alias /usr/src/manager/love-manager/static;
+        alias /usr/src/love-manager/static;
     }
     location /manager/media {
-      alias /usr/src/manager/love-manager/media;
+        alias /usr/src/love-manager/media;
     }
   }
 pvcMountpoint:
@@ -46,3 +46,11 @@ pvcMountpoint:
   storageClass: local-store
   accessMode: ReadWriteMany
   claimSize: 1Gi
+
+resources: {}
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
