tickets/DM-28694-4 * Add pull secrets to love-frontend chart. * Add pull secrets to love-manager chart.

--- a/charts/love-manager/templates/manager-deployment.yaml
+++ b/charts/love-manager/templates/manager-deployment.yaml
@@ -55,6 +55,10 @@ spec:
             claimName: {{ $values.name }}-pvc
       {{- end }}
       {{- end }}
+      {{- if $.Values.image.nexus3 }}
+      imagePullSecrets:
+        - name: {{ $.Values.namespace }}-{{ $.Values.image.nexus3 }}
+      {{- end }}
       {{- with $.Values.nodeSelector }}
       nodeSelector:
         {{- toYaml $ | nindent 8 }}
