--- a/charts/love-frontend/templates/job.yaml
+++ b/charts/love-frontend/templates/job.yaml
@@ -39,6 +39,10 @@ spec:
             claimName: {{ $values.name }}-pvc
       {{- end }}
       {{- end }}
+      {{- if $.Values.image.nexus3 }}
+      imagePullSecrets:
+        - name: {{ $.Values.namespace }}-{{ $.Values.image.nexus3 }}
+      {{- end }}
       {{- with $.Values.nodeSelector }}
       nodeSelector:
         {{- toYaml $ | nindent 8 }}
