--- a/charts/love-manager/values.yaml
+++ b/charts/love-manager/values.yaml
@@ -8,37 +8,21 @@ serviceType: ClusterIP
 ports:
   container: 8000
   node: 30000
-ingress:
-  hostname: love.local
-  httpPath: /
 pvcMountpoint:
 - name: love-manager
   path: /usr/src/love/manager
 envSecretKeyName: love
 env:
-  - var: SECRET_KEY
-    value: manager-secret-key
-    isSecret: true
-  - var: PROCESS_CONNECTION_PASS
-    value: manager-process-connection-password
-    isSecret: true
-  - var: ADMIN_USER_PASS
-    value: manager-admin-password
-    isSecret: true
-  - var: USER_USER_PASS
-    value: manager-user-user-password
-    isSecret: true
-  - var: CMD_USER_PASS
-    value: manager-cmd-user-password
-    isSecret: true
-  - var: SERVER_URL
-    value: love.lsst.local
-  - var: LOVE_PRODUCER_WEBSOCKET_HOST
-    value: love-service/manager/ws/subscription
-  - var: COMMANDER_HOSTNAME
-    value: love-commander-service
-  - var: COMMANDER_PORT
-    value: 5000
+  SERVER_URL: love.lsst.local
+  LOVE_PRODUCER_WEBSOCKET_HOST: love-service/manager/ws/subscription
+  COMMANDER_HOSTNAME: love-commander-service
+  COMMANDER_PORT: 5000
+envSecrets:
+  SECRET_KEY: manager-secret-key
+  PROCESS_CONNECTION_PASS: manager-process-connection-password
+  ADMIN_USER_PASS: manager-admin-password
+  USER_USER_PASS: manager-user-user-password
+  CMD_USER_PASS: manager-cmd-user-password
 config: |
     {
       "alarms": {
@@ -63,30 +47,22 @@ database:
     accessMode: ReadWriteMany
     claimSize: 2Gi
   env:
-    - var: DB_ENGINE
-      value: postgresql
-    - var: DB_NAME
-      value: postgres
-    - var: DB_USER
-      value: postgres
-    - var: DB_HOST
-      value: love-manager-database-service
-    - var: DB_PORT
-      value: 5432
-    - var: DB_PASS
-      value: database-password
-      isSecret: true
+    DB_ENGINE: postgresql
+    DB_NAME: postgres
+    DB_USER: postgres
+    DB_HOST: love-manager-database-service
+    DB_PORT: 5432
+  envSecrets:
+    DB_PASS: database-password
 redis:
   image:
     repository: redis
     tag: 5.0.3
     pullPolicy: IfNotPresent
   env:
-    - var: REDIS_HOST
-      value: love-manager-redis-service
-    - var: REDIS_PASS
-      value: redis-password
-      isSecret: true
+    REDIS_HOST: love-manager-redis-service
+  envSecrets:
+    REDIS_PASS: redis-password
   port: 6379
 
 resources: {}
